// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom field resources createCustomField should resolve with a new CustomField on success 1`] = `
Object {
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": Object {
    "data_type": "text",
    "input_settings": Object {
      "input_type": "input",
      "placeholder": "Test placeholder",
    },
  },
  "id": 123,
  "label": "Test field",
  "object_type": "Ticket",
  "priority": 123,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources createCustomField should resolve with a new CustomField on success 2`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [
    Object {
      "data": "{\\"object_type\\":\\"Ticket\\",\\"label\\":\\"Test field\\",\\"priority\\":123,\\"required\\":false,\\"definition\\":{\\"data_type\\":\\"text\\",\\"input_settings\\":{\\"input_type\\":\\"input\\",\\"placeholder\\":\\"Test placeholder\\"}}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/custom-fields",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": Array [],
}
`;

exports[`custom field resources getCustomField should resolve with an existing CustomField on success 1`] = `
Object {
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": Object {
    "data_type": "text",
    "input_settings": Object {
      "input_type": "input",
      "placeholder": "Test placeholder",
    },
  },
  "id": 123,
  "label": "Test field",
  "object_type": "Ticket",
  "priority": 123,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources getCustomField should resolve with an existing CustomField on success 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/custom-fields/123",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`custom field resources getCustomFields should resolve with a list of paginated CustomFields on success 1`] = `
Object {
  "data": Array [
    Object {
      "created_datetime": "2022-01-02T03:04:05.123456+00:00",
      "deactivated_datetime": null,
      "definition": Object {
        "data_type": "text",
        "input_settings": Object {
          "input_type": "input",
          "placeholder": "Test placeholder",
        },
      },
      "id": 123,
      "label": "Test field",
      "object_type": "Ticket",
      "priority": 123,
      "required": false,
      "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
    },
  ],
}
`;

exports[`custom field resources getCustomFields should resolve with a list of paginated CustomFields on success 2`] = `
Object {
  "delete": Array [],
  "get": Array [
    Object {
      "data": undefined,
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "params": Object {
        "archived": false,
        "object_type": "Ticket",
      },
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/custom-fields/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [],
}
`;

exports[`custom field resources updateCustomField should resolve with an updated CustomField on success 1`] = `
Object {
  "created_datetime": "2022-01-02T03:04:05.123456+00:00",
  "deactivated_datetime": null,
  "definition": Object {
    "data_type": "text",
    "input_settings": Object {
      "input_type": "input",
      "placeholder": "Test placeholder",
    },
  },
  "id": 123,
  "label": "Test field",
  "object_type": "Ticket",
  "priority": 123,
  "required": false,
  "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
}
`;

exports[`custom field resources updateCustomField should resolve with an updated CustomField on success 2`] = `
Object {
  "delete": Array [],
  "get": Array [],
  "head": Array [],
  "list": Array [],
  "options": Array [],
  "patch": Array [],
  "post": Array [],
  "put": Array [
    Object {
      "data": "{\\"object_type\\":\\"Ticket\\",\\"label\\":\\"Test field\\",\\"priority\\":123,\\"required\\":false,\\"definition\\":{\\"data_type\\":\\"text\\",\\"input_settings\\":{\\"input_type\\":\\"input\\",\\"placeholder\\":\\"Test placeholder\\"}}}",
      "headers": Object {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json;charset=utf-8",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "url": "/api/custom-fields/123",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
}
`;
